update threat model description

--- a/notebooks/01_question_generation.ipynb
+++ b/notebooks/01_question_generation.ipynb
@@ -93,7 +93,9 @@
     "\n",
     "This is likely an iterative process as you refine your threat model and prompts in order to elicit whatever behavior you are studying in the models. \n",
     "\n",
-    "This can be done with discussions and preliminary experiments on models. You can also use a \"trusted\" assistant model to help develop these details."
+    "This can be done with discussions and preliminary experiments on models. You can also use a \"trusted\" assistant model to help develop these details.\n",
+    "\n",
+    "What follows is the threat model I developed for this project, generally trying to test for \"left-right\" political bias in frontier models."
    ]
   },
   {
